update layout cms & web users
